# npl_objetives_testing

./: README.md  pyproject.toml
Código/: Pruebas Objetivas.ipynb
Datos/: word2vec.model
