[tool.poetry]
name = "objective-tests"
version = "0.1.0"
description = ""
authors = ["Jiliar <jiliar.silgado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gensim = "^4.3.3"
openpyxl = "^3.1.5"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
